@@ -1,5 +1,7 @@
 Changes with Apache 2.0.37
 
+  *) Fixed SHMCB session caching.  [Aaron Bannert, Cliff Woolley]
+
   *) Synced with remaining changes from mod_ssl 2.8.8-1.3.24:
      - Avoid SIGBUS on sparc machines with SHMCB session caches
      - Allow whitespace between the pipe and the name of the
